@@ -1,3 +1,6 @@
+2001-03-21  Ryan Nunn <triforce@merlin.net.au>
+	* usecode/siintrinsics.h: Changed 0x44, 0x45, 0x46 to 0x45, 0x46, 0x47
+
 2001-03-21  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* SI - Fixing bugs (and not necessarily successfully).
